fix: signup overlay-panel, chat-message text-align, firebase errors

--- a/dabubble/src/app/chat-message/chat-message.component.scss
+++ b/dabubble/src/app/chat-message/chat-message.component.scss
@@ -429,7 +429,6 @@
 
   .chat-message {
     font-size: 16px;
-    text-align: justify;
   }
 
   .chat-user-img {
