--- a/dabubble/src/app/direct-message-chats/direct-message-chats.component.scss
+++ b/dabubble/src/app/direct-message-chats/direct-message-chats.component.scss
@@ -634,7 +634,6 @@
 
   .chat-text {
     font-size: 16px;
-    text-align: justify;
   }
 
   .sender-name {
