--- a/dabubble/src/app/dm-thread/dm-thread.component.scss
+++ b/dabubble/src/app/dm-thread/dm-thread.component.scss
@@ -707,7 +707,6 @@
 
   .chat-message {
     font-size: 16px;
-    text-align: justify;
   }
 
   .channel-name {
