--- a/dabubble/src/app/thread/thread.component.scss
+++ b/dabubble/src/app/thread/thread.component.scss
@@ -197,7 +197,7 @@
   .add-reaction-btn.reverse {
     display: flex;
   }
-  
+
   .add-reaction-dialogue {
     left: 28px;
     border-top-left-radius: unset;
@@ -453,7 +453,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-} 
+}
 
 .more-reactions {
   width: fit-content;
@@ -721,7 +721,6 @@
 
   .chat-message {
     font-size: 16px;
-    text-align: justify;
   }
 
   .edit-textarea {
